<resources>
    <string name="app_name">Nom de l'appli</string>
    <string name="title_activity_login">Connexion</string>
    <string name="title_activity_signUp">S'enregistrer</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Se connecter ou s'enregistrer</string>
    <string name="action_sign_in_short">Connexionn</string>
    <string name="error_invalid_email">Veuillez rentrer une adresse e-mail valide</string>
    <string name="error_invalid_password">Veuillez rentrer un mot de passe valide</string>
    <string name="error_incorrect_password">Le mot de passe est incorrect</string>
    <string name="error_field_required">Ce champs est obligatoire</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="ignorer">Ignorer</string>
    <string name="enregistrer">S\'enregistrer</string>
    <string name="connexion_externe">Ou se connecter avec</string>
    <string name="email">Email</string>
    <string name="textview">TextView</string>
    <string name="valider">Valider</string>
</resources>
